[gd_scene load_steps=12 format=3 uid="uid://3v5dys4mlir2"]

[ext_resource type="Script" path="res://scenes/pause_menu_2.gd" id="1_ifcku"]
[ext_resource type="Texture2D" uid="uid://ca72n54jpadvx" path="res://assets/pixil-frame-1.png" id="2_5axvw"]
[ext_resource type="Shader" path="res://scenes/pause_menu_2.gdshader" id="2_t5gar"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2ua2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_raowy"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.548088, 0.508078, 0.492051, 1)
border_width_bottom = 2
border_color = Color(0.266667, 0.141176, 0.203922, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 2.0
expand_margin_right = 4.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vj0tq"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.658824, 0.619608, 0.603922, 1)
border_width_bottom = 4
border_color = Color(0.13135, 0.143211, 0.316499, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 2.0
expand_margin_right = 4.0
expand_margin_bottom = 2.0
shadow_size = 2

[sub_resource type="Theme" id="Theme_7b04k"]
Button/font_sizes/font_size = 30
Button/styles/focus = SubResource("StyleBoxEmpty_t2ua2")
Button/styles/hover = SubResource("StyleBoxFlat_raowy")
Button/styles/normal = SubResource("StyleBoxFlat_vj0tq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f5v6r"]
shader = ExtResource("2_t5gar")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_hwbdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_03qj8"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.882]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_shiha"]
_data = {
"RESET": SubResource("Animation_hwbdc"),
"blur": SubResource("Animation_03qj8")
}

[node name="pause_menu_2" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7b04k")
script = ExtResource("1_ifcku")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_f5v6r")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -321.0
offset_right = 571.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -242.0
offset_right = 205.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5axvw")
region_rect = Rect2(471.819, 95.4547, 306.364, 275.455)

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -133.0
offset_right = 103.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="resume" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"
icon_alignment = 1

[node name="options" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="quit" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_shiha")
}

[connection signal="pressed" from="NinePatchRect/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/quit" to="." method="_on_quit_pressed"]
